Update GAP 0608 4b5071e3b7dc46d19cb42d4d94e8b100.md

--- a/GAP 0608 4b5071e3b7dc46d19cb42d4d94e8b100.md
+++ b/GAP 0608 4b5071e3b7dc46d19cb42d4d94e8b100.md
@@ -1,7 +1,6 @@
-# GAP 0608
-
+Use KNN to assign each state an appropriate distribution center
 ```
-資料前處理, 把年份拆開
+# Data Preprocessing
 df = pd.read_csv("Total.csv")
 dic = {"state": [df.iloc[i][0] for i in range(df.shape[0])],
        "stores": [df.iloc[i][1] for i in range(df.shape[0])],
@@ -17,7 +16,11 @@ dic = {"state": [df.iloc[i][0] for i in range(df.shape[0])],
        "stores": [df.iloc[i][3] for i in range(df.shape[0])],
        "year": [2021 for i in range(df.shape[0])]}
 df_21 = pd.DataFrame(dic)
-#因為順序不會影響索性直接三份疊加
+
+![image](https://user-images.githubusercontent.com/58899897/194106158-5b65d3b9-ce77-472c-99f1-d2719a6331dc.png)
+
+
+#Order is not important in this case, so just append all the data frame 
 df_all = df_19.append(df_20.append(df_21))
 print(df_all)
 df_all.to_csv("totaldf.csv", index = True)
